# CMakeHowTo

./: README.md
VSCode_CMake_Test_Folder/: CMakeLists.txt  main.cpp
VSCode_CMake_Test_Folder/src/: Pet.cpp
cmake_Build/: CMakeLists.txt  main.cpp
cmake_Build_Dynamic_Lib_Link/: CMakeLists.txt  good_morning.cpp
cmake_Build_Lib_Link_Option/: CMakeLists.txt
cmake_Build_Static_Lib_Link/: CMakeLists.txt  Pet.cpp  Pet.h  good_morning.h
cmake_Build_lib_link_real_project/: CMakeLists.txt
cmake_Build_lib_link_real_project/src/: CMakeLists.txt  good_morning.cpp
cmake_Build_lib_link_real_project/test/: CMakeLists.txt  main.cpp
g++_Build/: a.out
g++_Build_Dynamic_Lib_Link/: a.out
g++_Build_Static_Lib_Link/: a.out  main.cpp
g++_Build_lib_link_real_project/src/: libGreetingPet.dylib
g++_Build_lib_link_real_project/test/: a.out
